fixed a quick issue with the case study button on the home page being too close to the images

--- a/public/assets/css/project.css
+++ b/public/assets/css/project.css
@@ -36,6 +36,7 @@ body#home-landing #case-study-section {
     display: flex;
     background-size: 5px 5px;
     overflow: hidden;
+    gap: 90px;
 }
 
 .case-study-title-top {
